syntax = "proto3";

package magma.lte.oai;
option go_package = "magma/lte/cloud/go/protos/oai";

message S1apTimer {
  int32 id = 1;  // long
  int32 sec = 2 [deprecated = true]; // long
  int32 msec = 3; // long
}

message SupportedTaiItems {
  uint32 tac = 1;
  uint32 bplmnlist_count = 2;
  repeated bytes bplmns = 3;
}

// supported_ta_list_t
message SupportedTaList {
  uint32 list_count = 1;
  repeated SupportedTaiItems supported_tai_items = 2;
}

message ERabAdmittedItem {
  uint32 e_rab_id = 1;
  bytes transport_layer_address = 2;
  uint32 gtp_teid = 3;
}

message ERabAdmittedList {
  uint32 no_of_items = 1;
  repeated ERabAdmittedItem item = 2;
}

enum S1apEnbState {
  S1AP_INIT = 0; /// The sctp association has been established but s1 hasn't been
                 /// setup.
  S1AP_RESETING = 1; /// The s1state is resetting due to an SCTP reset on the bound
                     /// association.
  S1AP_READY = 2; ///< MME and eNB are S1 associated, UE contexts can be added
  S1AP_SHUTDOWN = 3; /// The S1 state is being torn down due to sctp shutdown.
}

message EnbDescription {
  uint32 enb_id = 1;

  int32 s1_state = 2 [deprecated = true];            // enum mme_s1_enb_state_s
  bytes enb_name = 3;            // char[]
  uint32 default_paging_drx = 4; // uint8_t
  uint32 nb_ue_associated = 5;

  uint32 sctp_assoc_id = 6;    // sctp_assoc_id_t
  uint32 next_sctp_stream = 7; // sctp_stream_id_t
  uint32 instreams = 8;        // sctp_stream_id_t
  uint32 outstreams = 9;      // sctp_stream_id_t

  map<uint64, uint64> ue_ids = 10 [deprecated = true]; // mme_ue_s1ap_id -> comp_s1ap_id
  SupportedTaList supported_ta_list = 11; // TAs supported by eNB
  bytes ran_cp_ipaddr = 12; // eNB sctp end point IP addr
  uint32 ran_cp_ipaddr_sz = 13; // eNB sctp end point IP addr size
  map<uint32, uint64> ue_id_map = 14; // mme_ue_s1ap_id -> comp_s1ap_id
  S1apEnbState s1_enb_state = 15;
}

enum S1apUeState {
 S1AP_UE_INVALID_STATE = 0;
 S1AP_UE_WAITING_ICSR = 1; ///< Waiting for Initial Context Setup Response
 S1AP_UE_HANDOVER = 2;    ///< Handover procedure triggered
 S1AP_UE_CONNECTED = 3;   ///< UE context ready
 S1AP_UE_WAITING_CRC = 4; /// UE Context release Procedure initiated , waiting for
                          /// UE Context Release Complete
}

message UeDescription {
  int32 s1_ue_state = 2 [deprecated = true];     // enum s1_ue_state_s
  uint32 enb_ue_s1ap_id = 3; // enb_ue_s1ap_id_t
  uint32 mme_ue_s1ap_id = 4; // mme_ue_s1ap_id_t

  uint32 sctp_stream_recv = 5; // sctp_stream_id_t
  uint32 sctp_stream_send = 6; // sctp_stream_id_t

  S1apTimer s1ap_ue_context_rel_timer = 7; // struct s1ap_timer_t

  uint32 sctp_assoc_id = 8; // sctp_assoc_id_t

  S1apHandoverState s1ap_handover_state = 9; // s1ap_handover_state_t
  uint64 comp_s1ap_id = 10; // sctp_assoc_id & enb_ue_s1ap_id
  S1apUeState s1ap_ue_state = 11;
}

message S1apState {
  map<uint32, EnbDescription> enbs = 1;  // enbid -> EnbDescription
  map<uint32, uint32> mmeid2associd = 2; // mmeueid -> ue associd
  uint32 num_enbs = 3;
}

message S1apImsiMap {
  map<uint64, uint64> mme_ue_id_imsi_map = 1 [deprecated = true]; // mme_s1ap_ue_id => IMSI64
  map<uint32, uint64> mme_ue_s1ap_id_imsi_map = 2; // mme_ue_s1ap_id => IMSI64
}

message S1apHandoverState {
  uint32 mme_ue_s1ap_id = 1;
  uint32 source_enb_id = 2;
  uint32 target_enb_id = 3;
  uint32 target_enb_ue_s1ap_id = 4; // enb_ue_s1ap_id_t
  uint32 target_sctp_stream_recv = 5; // sctp_stream_id_t
  uint32 target_sctp_stream_send = 6; // sctp_stream_id_t
  uint32 source_enb_ue_s1ap_id = 7;
  uint32 source_sctp_stream_recv = 8;
  uint32 source_sctp_stream_send = 9;
  ERabAdmittedList e_rab_admitted_list = 10;
}
